client/app/css/main.css
.js-disabled-message {
  display: none;
}

.reveal {
  opacity: 0.3;
  animation: fadeIn 0.3s forwards;
}

@keyframes fadeIn {
  to {
    opacity: 1;
  }
}

a,
a:hover,
a:active,
.nav-link-custom,
a:focus {
  color: #205282;
  outline: 0;
  font-weight: bold;
  text-decoration: none;
}

a:hover,
.onion-address {
  color: #5797d5;
}

#FooterBox {
  background-color: #f5f7fa;
  text-align: center;
}

#FooterBox a,
#FooterBox a:hover,
#FooterBox a:active,
#FooterBox a:focus {
  font-weight: bold;
}


.disclaimer-text, .tos-text {
  display: block;
  padding: 1em;
  font-family: monospace;
  font-size: 0.8rem;
  max-height: 40em;
  max-width: 80rem;
  overflow-y: scroll;
}

#Sidebar a {
  display: block;
  margin-bottom: 0.5em;
}

#browser-not-supported {
  display: none;
}

* {
  word-wrap: break-word;
  overflow-wrap: break-word;
  box-shadow: none;
}

html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

.container {
  overflow-y: auto;
}

body {
  background-color: #fff;
  color: #1d1f2a;
  font-family: Inter, "Noto Sans Armenian", "Noto Sans Arabic", "Noto Sans Bengali", "Noto Sans Hebrew", "Noto Sans HK", "Noto Sans JP", "Noto Sans Georgian", "Noto Sans Khmer", "Noto Sans KR", "Noto Sans Myanmar", "Noto Sans Sc", "Noto Sans Tamil", "Noto Sans Thaana", "Noto Sans Thai", "Noto Serif Tibetan", sans-serif;
  font-size: 16px;
  min-height: 20rem;
}

th .fa-solid,
.fa-chevron-up,
.fa-chevron-down {
  margin-left: 5px;
  margin-right: 5px;
}

.status-box-container {
  margin-right: 5px;
}

.status-box-list {
  width:150px;
}

.status-container {
  display: flex;
  align-items: center;
}

.status-label {
  margin-right: 10px;
}

.select-size {
  width: 100px;
}

#assign-submission-status {
  justify-content: flex-end;
}

.onion-address {
  font-weight: bold;
  word-break: break-all;
}

.invisible {
  opacity: 0;
}

.ngb-dp-week > .ngb-dp-weekday {
  color: #205282;
}

.multiselect-item-checkbox {
  font-weight: normal;
}

table tr {
  height: 50px;
}

table tr td {
  vertical-align: middle;
}

.uib-datepicker-popup {
  padding: 5px;
  margin: 0;
}

.uib-datepicker {
  padding: 5px;
}

.uib-button-bar>.btn-group>.btn-info {
  display: none;
}

.uib-button-bar>.btn-success {
  display: none;
}

.uib-datepicker th,
.uib-datepicker td {
  white-space: nowrap;
  min-width: 0;
  padding: 2px;
}

.filter-selected {
  color: #377abc;
}

.uib-datepicker button {
  background: #fff;
  color: grey;
}

.full button {
  background: #dde3ed;
  color: #2866a2;
}

.uib-datepicker button:active {
  background: #dde3ed;
  color: #2866a2;
}

.uib-datepicker button:hover {
  background: #dde3ed;
  color: #2866a2;
}

.table-responsive {
  overflow: inherit;
}

.dropdown-multi-select-container {
  position: relative;
}

.form-control {
  background-color: #f5f7fa;
}

.form-control:hover {
  background-color: #fff;
}

.h1,
h1 {
  font-size: 1.6em;
}

.h2,
h2 {
  font-size: 1.5em;
}

.h3,
h3 {
  font-size: 1.4em;
}

.h4,
h4 {
  font-size: 1.3em;
}

.h5,
h5 {
  font-size: 1.2em;
}

.h6,
h6 {
  font-size: 1.1em;
}

.container-fluid {
  padding: 0;
}

.nav-link {
  color: #205282;
  font-weight: bold;
}

.nav-link:hover {
  color: #103253;
}

.nav-item.active .nav-link {
  color: #103253;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
  color: #103253;
}

.table thead th {
  border-top: 0;
}

.btn {
  font-weight: bold;
}

.nav,
.pagination,
.carousel,
.card-title a {
  cursor: pointer;
}

.card {
  margin-bottom: 1em;
}

#ReceiverContextAdder{
  margin-bottom: 5px;
}

.mt-auto {
  margin-top: auto;
}

.mb-auto {
  margin-bottom: auto;
}

#sidebar a.active,
#sidebar a:active.active,
#sidebar a:hover.active,
#sidebar a:focus.active {
  border-bottom: 1px solid #c8d1e0;
  width: max-content;
}

#sidebar a {
  display: block;
  margin-bottom: 0.5em;
}

#ContentBox {
  padding: 1em;
}

#FooterBox,
#DemoBadge,
#PrivacyBadge,
#operator-badge{
  padding: 1em;
}

.badge.bg-primary {
  background-color: #205282;
}

#assignLabelInput{
  margin-left: 5px;
}

.badge.bg-primary:hover {
  background-color: #c2d9f0;
}

.page-link {
  color: #205282;
}

.btn-link {
  color: #205282;
  text-decoration: none;
}

.context-image,
.receiver-image {
  height: 10rem;
  max-width: 20rem;
}

.title {
  font-weight: bold;
}

#PrivacyBadge {
  background-color: #1d1f24;
  color: #fff;
}

.tab-content {
  padding-top: 1em;
}

.preformatted {
  white-space: pre-wrap;
}

.badge-warning-custom{
  padding: .25em .4em;
  text-align: center;
  border-radius: .25rem;
}

.wb-image-upload{
  height: 10.4rem;
  max-width: 20.4rem;
  max-height: 9.5rem;
  min-width: 10.4rem;
  padding: 10px 10px 20px;
  object-fit: contain;
}

.logo-image {
  border: 1px dashed #c8d1e0;
  height: 10.4rem;
  max-width: 20.4rem;
  max-height: 10rem;
  min-width: 10.4rem;
  padding: 10px 10px 20px;
  object-fit: contain;
  border-radius: 5px;
}

.logo-image-empty{
  border: 1px dashed #c8d1e0;
  position: relative;
  z-index: 0;
  height: 10.4rem;
  width: 10.4rem;
  text-align: left;
  margin: 0;
  border-radius: 5px;
  padding: 0;
}

.image-upload {
  position: relative;
  z-index: 0;
  height: 10.4rem;
  min-height: 10.4rem;
  text-align: left;
  width: auto;
  margin: 0 auto;
}

.image-upload .change-picture-button {
  position: absolute;
  bottom: 1rem;
  text-align: center;
  z-index: 10;
}

.image-thumbnail,
.image-upload-thumbnail,
.image-upload-thumbnail img {
  height: 10rem;
  width: 10rem;
}

.image-upload-thumbnail img {
  vertical-align: middle;
  text-align: center;
  z-index: 1;
}

.login-error-box-homepage {
  display: inline-block;
  margin: 1em;
}

.login-form {
  min-width: 320px;
}

.large-close-button {
  font-size: 24px;
  padding: 10px;
}

.custom-close-button {
  font-size: 23px;
  font-weight: bold;
  color: #737373;
  background: #0000;
  border: none;
  position: absolute;
  right: 10px;
  top: 0;
}

.alert-danger-console{
  color: black;
  border: 1px solid #c8d1e0;
}
/* ... */

